# g4omniverse

schema/: CMakeLists.txt  SurfaceMesh.cpp  SurfaceMesh.h  booleanSolid.cpp  cons.cpp  g4.usda  generatedSchema.usda  module.cpp  physical.cpp  physical.h  placement.cpp  placement.h  plugInfo.json  tokens.cpp  tokens.h  tubs.cpp  tubs.h  wrapBooleanSolid.cpp  wrapBox.cpp  wrapDisplacedSolid.cpp  wrapIntersection.cpp  wrapLogical.cpp  wrapMultiUnion.cpp  wrapPhysical.cpp  wrapPlacement.cpp  wrapSubtraction.cpp  wrapTokens.cpp  wrapTubs.cpp  wrapUnion.cpp  wrapVSolid.cpp
tests/: test_logical_physical.py  test_multiunion.py
